WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147823
[CoordinatedGraphics] Fix forward declarations of CoordinatedGraphicsLayerState, ViewportAttributes
https://bugs.webkit.org/show_bug.cgi?id=147823
Summary
[CoordinatedGraphics] Fix forward declarations of CoordinatedGraphicsLayerSta...
Zan Dobersek
Reported
2015-08-10 00:31:53 PDT
[CoordinatedGraphics] Fix forward declarations of CoordinatedGraphicsLayerState, ViewportAttributes
Attachments
Patch
(2.07 KB, patch)
2015-08-10 00:40 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2015-08-10 00:40:46 PDT
Created
attachment 258611
[details]
Patch
Zan Dobersek
Comment 2
2015-08-10 07:12:37 PDT
Comment on
attachment 258611
[details]
Patch Clearing flags on attachment: 258611 Committed
r188212
: <
http://trac.webkit.org/changeset/188212
>
Zan Dobersek
Comment 3
2015-08-10 07:12:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug