[CoordinatedGraphics] Fix forward declarations of CoordinatedGraphicsLayerState, ViewportAttributes https://bugs.webkit.org/show_bug.cgi?id=147823

Reviewed by Carlos Garcia Campos.

* WebProcess/WebPage/CoordinatedGraphics/ThreadedCoordinatedLayerTreeHost.h:
* WebProcess/WebPage/LayerTreeHost.h:


Canonical link: https://commits.webkit.org/165943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188212 268f45cc-cd09-0410-ab3c-d52691b4dbfc