Source/WebKit2/WebProcess/WebPage/LayerTreeHost.h
@@ -44,7 +44,7 @@ class IntSize;
 class GraphicsLayer;
 class GraphicsLayerFactory;
 #if USE(COORDINATED_GRAPHICS_THREADED)
-class ViewportAttributes;
+struct ViewportAttributes;
 #endif
 }
 
